--- a/src/loggedin.html
+++ b/src/loggedin.html
@@ -9,8 +9,13 @@
     <title>Logged In</title>
 </head>
 <body>
-    <div id="form">
-        <h2>You have logged in successfully.</h2>
+    <form align="right" name="form1" method="post" action="LogoutServlet">
+        <label class="logoutLblPos">
+            <input name="submit2" type="submit" id="submit2" value="Logout">
+        </label>
+    </form>
+    <div id="message">
+        <h2>Welcome, John Appleseed!</h2>
     </div>
 </body>
 </html>
